service-loadBalancer-networking/cilium/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: dev
  labels: 
    app: app1-dev
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx
          #command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: dev
  labels: 
    app: app2-dev
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: dev
  labels: 
    app: app3-dev
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: prod
  labels: 
    app: app1-prod
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: prod
  labels: 
    app: app2-prod
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: prod
  labels: 
    app: app3-prod
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: staging
  labels: 
    app: app1-stage
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: staging
  labels: 
    app: app2-stage
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: staging 
  labels: 
    app: app3-stage
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: nicolaka/netshoot:latest
          command: ['sleep', 'infinity']
