service-loadBalancer-networking/cilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: my-service
spec: 
  selector: 
    app: app1
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80 
    nodePort: 30007
